--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="images/Kian_Me_Cropped.png" style="width:100%" alt="Avatar">
-          <div class="w3-display-bottomleft w3-container w3-text-sand">
+          <img src="images/ME_PIC.png" style="width:100%" alt="Avatar">
+          <div class="w3-display-bottomleft w3-container w3-text-blue">
             <h2>Kian Frawley</h2>
           </div>
         </div>
