--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 				<h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-blue"></i>Education</h2>
 				<div class="w3-container">
 				  <h5 class="w3-opacity"><b>Thomas J. Watson College of Engineering and Applied Science, Binghamton University</b></h5>
-				  <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2025</h6>
+				  <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2023 - 2025</h6>
 				  <p>B.S. in Computer Science</p>
 				  <hr>
 				</div>
