--- a/index.html
+++ b/index.html
@@ -25,51 +25,51 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="images/ME_PIC.png" style="width:100%" alt="Avatar">
+          <img src="images/HeadShotWithBackground.png" style="width:100%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-sand">
             <h2>Kian Frawley</h2>
           </div>
         </div>
         <div class="w3-container">
-          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue"></i>Computer Science Undergraduate</p>
-          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-blue"></i>Long Island, USA</p>
-          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-blue"></i>kfrawley@kiancodes.org</p>
-          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-blue"></i>1-631-295-8692</p>
+          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-black"></i>Computer Science Undergraduate</p>
+          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-black"></i>Long Island, USA</p>
+          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-black"></i>kfrawley@kiancodes.org</p>
+          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-black"></i>1-631-295-8692</p>
           <hr>
 
-          <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-blue"></i>Skills</b></p>
+          <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-black"></i>Skills</b></p>
           <p>Programming</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-blue" style="width:90%">90%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:90%">90%</div>
           </div>
           <p>Weight Lifting</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-blue" style="width:80%">
+            <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:80%">
               <div class="w3-center w3-text-white">80%</div>
             </div>
           </div>
           <p>Leadership</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-blue" style="width:75%">75%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:75%">75%</div>
           </div>
           <p>Guitar</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-blue" style="width:50%">50%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:50%">50%</div>
           </div>
           <br>
 
-          <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-blue"></i>Languages</b></p>
+          <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-black"></i>Languages</b></p>
           <p>Java</p>
           <div class="w3-light-grey w3-round-xlarge">
-            <div class="w3-round-xlarge w3-blue" style="height:24px;width:100%"></div>
+            <div class="w3-round-xlarge w3-black" style="height:24px;width:100%"></div>
           </div>
           <p>English</p>
           <div class="w3-light-grey w3-round-xlarge">
-            <div class="w3-round-xlarge w3-blue" style="height:24px;width:55%"></div>
+            <div class="w3-round-xlarge w3-black" style="height:24px;width:55%"></div>
           </div>
           <p>C</p>
           <div class="w3-light-grey w3-round-xlarge">
-            <div class="w3-round-xlarge w3-blue" style="height:24px;width:25%"></div>
+            <div class="w3-round-xlarge w3-black" style="height:24px;width:25%"></div>
           </div>
           <br>
         </div>
@@ -82,44 +82,44 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <div class="w3-twothird">
     
       <div class="w3-container w3-card w3-white w3-margin-bottom">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-blue"></i>Experience</h2>
+        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Experience</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Computer Science Club President | Suffolk County Community College</b></h5>
-          <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Sept 2022- <span class="w3-tag w3-blue w3-round">May 2023</span></h6>
+          <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Sept 2022- <span class="w3-tag w3-black w3-round">May 2023</span></h6>
           <p>In this position, I synergized with a team of 6 to create a club website by implementing HTML, CSS, and JavaScript for the club website. In addition, I acted as the project lead, coordinating with team members to navigate scheduling conflicts and ensure on-time delivery of the product.
 		  </p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Security Guard | Katta Security</b></h5>
-          <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Sept 2021 - Jan 2024</h6>
+          <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Sept 2021 - Jan 2024</h6>
           <p>Observed, survey, and reported suspicious activities at the assigned site to supervisor while also utilizing communication skills to deescalate conflicts and escort trespassers off private property.</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b> Computer/Mobile Phone Technician | Mobile Phone Repair</b></h5>
-          <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2020 - Aug 2021</h6>
+          <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2020 - Aug 2021</h6>
           <p>Communicated with customers to properly troubleshoot issues and repair devices.</p><br>
         </div>
       </div>
 
 			<div class="w3-container w3-card w3-white">
-				<h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-blue"></i>Education</h2>
+				<h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Education</h2>
 				<div class="w3-container">
 				  <h5 class="w3-opacity"><b>Thomas J. Watson College of Engineering and Applied Science, Binghamton University</b></h5>
-				  <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2023 - 2025</h6>
+				  <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2023 - 2025</h6>
 				  <p>B.S. in Computer Science</p>
 				  <hr>
 				</div>
 				<div class="w3-container">
 				  <h5 class="w3-opacity"><b>Suffolk County Community College</b></h5>
-				  <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2021 - 2023</h6>
+				  <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2021 - 2023</h6>
 				  <p>A.S. in Computer Science</p>
 				  <hr>
 				</div>
 				<div class="w3-container">
 					<h5 class="w3-opacity"><b>Comptia A+ Certification</b></h5>
-					<h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2023</h6>
+					<h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2023</h6>
 					<p>Certified Technician</p>
 					<hr>
 				  </div>
@@ -129,7 +129,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 </div> 
 
 	<!-- Footer -->
-	<footer class="w3-container w3-blue w3-center w3-margin-top">
+	<footer class="w3-container w3-black w3-center w3-margin-top">
     <a>Follow me on: </a>
 		<a href="https://github.com/Sine-Of-Time" target="_blank" class="w3-hover-opacity"><p class="fa fa-github"></p></a>
 		<a href="https://www.linkedin.com/in/kian-frawley/" target="_blank" class="w3-hover-opacity"><p class="fa fa-linkedin"></p></a>
