--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </div>
         <div class="w3-container">
           <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-black"></i>Computer Science Undergraduate</p>
-          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-black"></i>Long Island, USA</p>
+          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-black"></i>New York, USA</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-black"></i>kfrawley@kiancodes.org</p>
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-black"></i>1-631-295-8692</p>
           <hr>
@@ -84,9 +84,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Experience</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Computer Science Club President | Suffolk County Community College</b></h5>
-          <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Sept 2022- <span class="w3-tag w3-black w3-round">May 2023</span></h6>
-          <p>In this position, I synergized with a team of 6 to create a club website by implementing HTML, CSS, and JavaScript for the club website. In addition, I acted as the project lead, coordinating with team members to navigate scheduling conflicts and ensure on-time delivery of the product.
+          <h5 class="w3-opacity"><b>Software Dev Internship | Avangrid</b></h5>
+          <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2024- <span class="w3-tag w3-black w3-round">August 2024</span></h6>
+          <p>In this position, I worked with team members to implment a logging feature in over 200 programs and revamp my departments file structure of over 500 files.
 		  </p>
           <hr>
         </div>
