Updated HTML with new contact links and project changes

--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 </head>
 <body class="w3-light-grey">
 
-
-
-
 <!-- Page Container -->
 <div class="w3-content w3-margin-top" style="max-width:1400px;">
 
@@ -36,8 +33,24 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-black"></i>Computer Science Undergraduate</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-black"></i>New York, USA</p>
-          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-black"></i>kfrawley@kiancodes.org</p>
+          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-black"></i>kianisfrawley@gmail.com</p>
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-black"></i>1-631-295-8692</p>
+          <!-- Resume link -->
+          <p><i class="fa fa-file-text fa-fw w3-margin-right w3-large w3-text-black"></i>
+          <a href="Kian_Frawley_Ressume_25.pdf" target="_blank">Resume</a>
+          </p>
+
+          <!-- LinkedIn link -->
+          <p><i class="fa fa-linkedin fa-fw w3-margin-right w3-large w3-text-black"></i>
+          <a href="https://www.linkedin.com/in/kian-frawley/" target="_blank">LinkedIn</a>
+          </p>
+
+          <!-- GitHub link -->
+          <p>
+          <i class="fa fa-github fa-fw w3-margin-right w3-large w3-text-black"></i>
+          <a href="https://github.com/Sine-Of-Time" target="_blank">GitHub</a>
+          </p>
+
           <hr>
 
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-black"></i>Skills</b></p>
@@ -45,7 +58,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:90%">90%</div>
           </div>
-          <p>Weight Lifting</p>
+          <p>Machine Learning</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:80%">
               <div class="w3-center w3-text-white">80%</div>
@@ -55,24 +68,24 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:75%">75%</div>
           </div>
-          <p>Guitar</p>
+          <p>Data Visualization</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:50%">50%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:90%">90%</div>
           </div>
           <br>
 
           <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-black"></i>Languages</b></p>
-          <p>Java</p>
+          <p>C#</p>
           <div class="w3-light-grey w3-round-xlarge">
             <div class="w3-round-xlarge w3-black" style="height:24px;width:100%"></div>
           </div>
-          <p>English</p>
-          <div class="w3-light-grey w3-round-xlarge">
-            <div class="w3-round-xlarge w3-black" style="height:24px;width:55%"></div>
-          </div>
           <p>C</p>
           <div class="w3-light-grey w3-round-xlarge">
-            <div class="w3-round-xlarge w3-black" style="height:24px;width:25%"></div>
+            <div class="w3-round-xlarge w3-black" style="height:24px;width:90%"></div>
+          </div>
+          <p>SQL</p>
+          <div class="w3-light-grey w3-round-xlarge">
+            <div class="w3-round-xlarge w3-black" style="height:24px;width:80%"></div>
           </div>
           <br>
         </div>
@@ -84,64 +97,111 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <!-- Right Column -->
     <div class="w3-twothird">
     
+      <!-- Experience -->
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Experience</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Software Dev Internship | Avangrid</b></h5>
-          <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2024 - <span class="w3-tag w3-black w3-round">August 2024</span></h6>
-          <p>In this position, I worked with team members to implment a logging feature in over 200 programs and revamp my departments file structure of over 500 files.
-		  </p>
+          <h5 class="w3-opacity"><b>Data Engineering Internship | Avangrid</b></h5>
+          <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2025 - <span class="w3-tag w3-black w3-round">August 2025</span></h6>
+          <p>Worked as an intern ambassador in addition to working with CSDAS to develop an internal audit tool from the ground up which used C#, VBS, and SQL to ensure database tables were accurately synchronized.</p>
+          <h5 class="w3-opacity"><b>Software Engineering Internship | Avangrid</b></h5>
+          <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2024 - August 2024</h6>
+          <p>In this position, I worked with team members to implement a logging feature in over 200 programs and revamp my department’s file structure of over 500 files.</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Security Guard | Katta Security</b></h5>
           <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Sept 2021 - Jan 2024</h6>
-          <p>Observed, survey, and reported suspicious activities at the assigned site to supervisor while also utilizing communication skills to deescalate conflicts and escort trespassers off private property.</p>
+          <p>Observed, surveyed, and reported suspicious activities at the assigned site to supervisor while also utilizing communication skills to deescalate conflicts and escort trespassers off private property.</p>
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b> Computer/Mobile Phone Technician | Mobile Phone Repair</b></h5>
+          <h5 class="w3-opacity"><b>Computer/Mobile Phone Technician | Mobile Phone Repair</b></h5>
           <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2020 - Aug 2021</h6>
           <p>Communicated with customers to properly troubleshoot issues and repair devices.</p><br>
         </div>
       </div>
 
-			<div class="w3-container w3-card w3-white">
-				<h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Education</h2>
-				<div class="w3-container">
-				  <h5 class="w3-opacity"><b>Thomas J. Watson College of Engineering and Applied Science, Binghamton University</b></h5>
-				  <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2023 - 2025</h6>
-				  <p>B.S. in Computer Science</p>
-				  <hr>
-				</div>
-				<div class="w3-container">
-				  <h5 class="w3-opacity"><b>Suffolk County Community College</b></h5>
-				  <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2021 - 2023</h6>
-				  <p>A.S. in Computer Science</p>
-				  <hr>
-				</div>
-				<div class="w3-container">
-					<h5 class="w3-opacity"><b>Comptia A+ Certification</b></h5>
-					<h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2023</h6>
-					<p>Certified Technician</p>
-					<hr>
-				  </div>
-			  </div>
-		</div>
-	</div> 
+<!-- Projects -->
+<div class="w3-container w3-card w3-white w3-margin-bottom">
+  <h2 class="w3-text-grey w3-padding-16">
+    <i class="fa fa-code fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Projects
+  </h2>
+
+  <div class="w3-container">
+    <h5 class="w3-opacity"><b>Customer Service And Data Analytics Internal SAP/SQL Audit Tool</b></h5>
+    <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2025 - Aug 2025</h6>
+    <p>Created an internal audit program during my 2nd internship with Avangrid/NYSEG from the ground up which tracked the exact percent sync between remote SAP tables and their corresponding local SQL versions. Required me to fully understand existing code base.</p>
+    <hr>
+  </div>
+
+  <div class="w3-container">
+    <h5 class="w3-opacity"><b>SpaceInvadersJS</b></h5>
+    <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2024 - Aug 2024</h6>
+    <p>The second project I created over the summer of 2024 to improve my JavaScript skills.</p>
+
+    <!-- Play Project Button -->
+    <p>
+      <a href="https://kiancodes.org/spaceIn" target="_blank" 
+         class="w3-button w3-black w3-round w3-margin-top">
+        <i class="fa fa-play fa-fw"></i> Try It Out
+      </a>
+    </p>
+    <hr>
+  </div>
+
+  <div class="w3-container">
+    <h5 class="w3-opacity"><b>Book DataBase</b></h5>
+    <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jul 2022 - Aug 2022</h6>
+    <p>A project I made over the summer of 2022 to showcase GUI, OOP, and Java skills.</p>
+
+    <!-- YouTube Button -->
+    <p>
+      <a href="https://www.youtube.com/watch?v=BmMEWj9gKj0" target="_blank" 
+         class="w3-button w3-red w3-round w3-margin-top">
+        <i class="fa fa-youtube-play fa-fw"></i> Watch on YouTube
+      </a>
+    </p>
+    <hr>
+  </div>
+</div>
+
+
+
+      <!-- Education -->
+      <div class="w3-container w3-card w3-white">
+        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Education</h2>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Thomas J. Watson College of Engineering and Applied Science, Binghamton University</b></h5>
+          <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2023 - 2025</h6>
+          <p>B.S. in Computer Science</p>
+          <hr>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Suffolk County Community College</b></h5>
+          <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2021 - 2023</h6>
+          <p>A.S. in Computer Science</p>
+          <hr>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Comptia A+ Certification</b></h5>
+          <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2023</h6>
+          <p>Certified Technician</p>
+          <hr>
+        </div>
+      </div>
+    </div>
+  </div> 
 </div> 
 
-	<!-- Footer -->
-	<footer class="w3-container w3-black w3-center w3-margin-top">
-    <a>Follow me on: </a>
-		<a href="https://github.com/Sine-Of-Time" target="_blank" class="w3-hover-opacity"><p class="fa fa-github"></p></a>
-		<a href="https://www.linkedin.com/in/kian-frawley/" target="_blank" class="w3-hover-opacity"><p class="fa fa-linkedin"></p></a>
-		<a href="https://www.instagram.com/kianisfraw_/" target="_blank" class="w3-hover-opacity"><p class="fa fa-instagram"></p></a>
-		<a href="https://open.spotify.com/user/jgeyr6iip6vxkbsrfutets2qg?si=Tv525968RU-0IojLSVV5vQ" target="" class="w3-hover-opacity"><p class="fa fa-spotify"></p></a>
-		<a href="https://www.facebook.com/keth.frenderson?mibextid=LQQJ4d" target="" class="w3-hover-opacity"><p class="fa fa-facebook"></p></a>
-    <a href="https://kiancodes.org/spaceIn" target="" class="w3-hover-opacity">
-      <img src="invader.png">
-    </a>
-		</footer>
-  </body>
-  </html>
+<!-- Footer -->
+<footer class="w3-container w3-black w3-center w3-margin-top">
+  <a>Follow me on: </a>
+  <a href="https://github.com/Sine-Of-Time" target="_blank" class="w3-hover-opacity"><p class="fa fa-github"></p></a>
+  <a href="https://www.linkedin.com/in/kian-frawley/" target="_blank" class="w3-hover-opacity"><p class="fa fa-linkedin"></p></a>
+  <a href="https://www.instagram.com/kianisfraw_/" target="_blank" class="w3-hover-opacity"><p class="fa fa-instagram"></p></a>
+  </a>
+</footer>
+
+</body>
+</html>
