Updated HTML with new contact links and project changes

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-black"></i>1-631-295-8692</p>
           <!-- Resume link -->
           <p><i class="fa fa-file-text fa-fw w3-margin-right w3-large w3-text-black"></i>
-          <a href="Kian_Frawley_Ressume_25.pdf" target="_blank">Resume</a>
+          <a href="Kian_Frawley_Ressume_25_3.pdf" target="_blank">Resume</a>
           </p>
 
           <!-- LinkedIn link -->
