Added Birthday Card

--- a/Happy_Birthday_Madison!!.html
+++ b/Happy_Birthday_Madison!!.html
@@ -21,7 +21,7 @@
       </div>
       <div class="text-container">
         <p class="head">Happy Birthday Madison!!!</p>
-        <p>The only thing that sounds better then music in these head phones, is spending six months and more with you!</p>
+        <p>The only thing that sounds better then these headphones, is spending more time with you!</p>
         <p>Love Kian Frawley</p>
       </div>
     </div>
